--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project-wide Gradle settings.
 
-# IDE (e.g. Android Studio) users:
+# IDE (e.g. Android Studio) userPOJOs:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
 
