--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.SelectUserActivity"></activity>
+        <activity android:name=".view.SelectUserActivity">
+        </activity>
         <activity
-            android:name=".view.ModifyProfileActivity"
-            android:label="@string/title_activity_modify_profile"></activity>
+            android:name=".view.ModifyProfileActivity">
+        </activity>
     </application>
-
 </manifest>
